# osm-paths

./: .dockerignore  .gitignore  CHANGES.md  Dockerfile  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: release.yml
.github/workflows/: check-deps.yml  dependencies.yml  lint.yml  release.yml  tests.yml
docker/: Dockerfile
download/: apps.py  osm_to_geojson.py  serializers.py  urls.py  validity.py  views.py
download/management/commands/: download.py
download/tests/: __init__.py  test_API.py  test_command.py  test_osm_to_geojson.py
download/tests/data/: invalid_polygon.geojson  network.graphml  network2.graphml  polygon.geojson  results.geojson
importPath/: asgi.py  wsgi.py
osm-paths/: asgi.py  settings.py  urls.py  wsgi.py
osm_paths/: __init__.py  asgi.py  manage.py  settings.py  urls.py  wsgi.py
osm_paths/download/: apps.py  osm_to_geojson.py  serializers.py  urls.py  validity.py  views.py
osm_paths/download/management/commands/: download.py
osm_paths/download/tests/: __init__.py  test_API.py  test_command.py  test_osm_to_geojson.py
osm_paths/download/tests/data/: invalid_polygon.wkt  polygon.wkt
osm_paths/settings/: __init__.py  dev.py
