[project]
dynamic = ["version"]
name = "osm-paths"
dependencies = [
    "Django",
    "djangorestframework",
    "osmnx",
    "gunicorn",
]
[project.optional-dependencies]
dev = [
    "tblib",
    "coverage",
    "ruff",
    "uv"
]

[tool.coverage.run]
source = [
    "osm-paths"
]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/settings/*",
    "*/test_runner.py",
    "*/test_global.py",
    "wsgi.py",
]
data_file = ".coverage"

[tool.coverage.report]
ignore_errors = true
