[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["osm_paths",]

[tool.hatch.build.targets.sdist.force-include]
"./osm_paths" = "osm_paths"

[project]
version = "0.0.1"
name = "osm_paths"
description = "Download GeoJSON paths from OpenSTreetMap"
authors = [
  {name = "Nell Party", email = "nell.party@makina-corpus.com"},
]
maintainers = [
  {name = "Makina Corpus", email = "geobi@makina-corpus.com"}
]
dependencies = [
    "Django",
    "djangorestframework",
    "osmnx",
    "gunicorn",
]
[project.scripts]
osm_paths = "manage:main"
[project.optional-dependencies]
dev = [
    "hatchling",
    "tblib",
    "coverage",
    "ruff",
    "uv"
]

[tool.coverage.run]
source = [
    "osm_paths",
    "download"
]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/settings/*",
    "*/test_runner.py",
    "*/test_global.py",
    "wsgi.py",
    "asgi.py",
]
data_file = ".coverage"

[tool.coverage.report]
ignore_errors = true
