[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["osm_paths",]
exclude = [
    "**/tests",
    "**/dev.py",
]
[tool.hatch.build.targets.sdist]
packages = ["osm_paths",]
exclude = [
    "/osm_paths/download/tests",
    "/osm_paths/settings/dev.py",
]

[project]
version = "0.1.0"
name = "osm_paths"
description = "Download GeoJSON paths from OpenSTreetMap"
authors = [
  {name = "Nell Party", email = "nell.party@makina-corpus.com"},
]
maintainers = [
  {name = "Makina Corpus", email = "geobi@makina-corpus.com"}
]
dependencies = [
    "Django",
    "djangorestframework",
    "osmnx",
    "shapely",
    "gunicorn",
]
[project.scripts]
osm_paths = "osm_paths:main"
[project.optional-dependencies]
dev = [
    "hatchling",
    "tblib",
    "coverage",
    "ruff",
    "uv"
]

[tool.coverage.run]
source = [
    "osm_paths",
    "download"
]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/settings/*",
    "*/test_runner.py",
    "*/test_global.py",
    "wsgi.py",
    "asgi.py",
]
data_file = ".coverage"

[tool.coverage.report]
ignore_errors = true
